@startuml Diagrama de clases UC3 Publicar un evento
left to right direction

class  ":FormularioDeEventos" as form{
    #title : JTextField
    #FInic : JTextField 
    #FFin : JTextField 
    #categ : JTextField
    #desc : JTextField
    #publicar : JButton

    + IngresarDatosEventos(String titulo, DataTime fecha_inicio, DataTime fecha_fin, String categoria, String descripcion) : void
}

class  ":GestorDeEventos" as gestor{
    #eventoNuevo : Evento
    #form : FormularioDeEventos
    #cal : Calendario
    +EnviarDatosEvento(String, DataTime, DataTime, String, String) : void
    +CrearEvento(String, DataTime, DataTime, String, String) : void

}

class ":Evento" as event{
#titulo : String
#fecha_inicio : DataTime
#fecha_fin : DataTime
#categoria : String
#descripcion : String
+Evento(String, DataTime, DataTime, String, String) : Evento
+EventoCreado() : boolean
} 

class ":Calendario" as c{
#ListaDeEventos : List<Evento>
+AniadirACalendario(Evento) : void
}

form -- gestor 
gestor -- event
gestor -- c

@enduml